force-app/main/default/objects/Contact/fields/Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Date__c</fullName>
    <label>Date du consentement</label>
    <description>RGPD : date à laquelle le contact a accepté les communications.</description>
    <type>Date</type>
</CustomField>