force-app/main/default/objects/Contact/fields/Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Date__c</fullName>
    <label>Date du refus</label>
    <description>RGPD : date à laquelle le contact a refusé les emails (case standard « Refus des emails »).</description>
    <type>Date</type>
</CustomField>