force-app/main/default/objects/Contact/validationRules/Consent_Source_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Consent_Source_Required</fullName>
    <active>true</active>
    <description>RGPD : une date de consentement doit être accompagnée de sa source.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(Consent_Date__c)),
        ISBLANK(TEXT(Consent_Source__c))
    )</errorConditionFormula>
    <errorDisplayField>Consent_Source__c</errorDisplayField>
    <errorMessage>Indiquez comment le consentement a été recueilli.</errorMessage>
</ValidationRule>